bpy.ops.object.select_by_layer match='SHARED' option is not working #45782

Closed
opened 2015-08-13 13:09:32 +02:00 by Olli Kallioinen · 5 comments

Blender Version
Broken: 2.75a c27589e 64bit

Short description of error
Selecting all objects on a layer from python script doesn't select objects that belong to multiple layers when match='SHARED' is used.

(This used to work on some older blender version can't remember which)

Exact steps for others to reproduce the error

  • Open default scene
  • Set the cube to both layers 1 and 2
  • Make sure the cube is not selected
  • Open python console and enter: bpy.ops.object.select_by_layer(match='SHARED', extend=False, layers=1)
  • result: cube is not selected like expected
**Blender Version** Broken: 2.75a c27589e 64bit **Short description of error** Selecting all objects on a layer from python script doesn't select objects that belong to multiple layers when match='SHARED' is used. (This used to work on some older blender version can't remember which) **Exact steps for others to reproduce the error** - Open default scene - Set the cube to both layers 1 and 2 - Make sure the cube is not selected - Open python console and enter: `bpy.ops.object.select_by_layer(match='SHARED', extend=False, layers=1)` - result: cube is not selected like expected

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @suikki

Added subscriber: @suikki

This issue was referenced by blender/blender@828710d2ac

This issue was referenced by blender/blender@828710d2aca3c7595789d9892e092593e9d64e66

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2015-08-13 13:20:33 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#45782
No description provided.